# wh40kBAlistBuilder

./: .gitignore  CMakeLists.txt  README.md
DataFiles/: readme.txt
Headers/: errorwindow.h  factionchoicewindow.h  factiondata.h  listbuilderwindow.h  mainwindow.h
Images/: MyIcon.icns
Sources/: errorwindow.cpp  errorwindow.ui  factionchoicewindow.cpp  factionchoicewindow.ui  factiondata.cpp  listbuilderwindow.cpp  listbuilderwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui
